# besdq

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  notes.sh  pyproject.toml  simple_query.py  spec.md  test_simple_query.py
.claude/: SKILLS.md
besdq/: __init__.py  besd_reader.py  builder.py  cli.py  queries.py  sqlite_query.py
docs/: notes.ipynb
tests/: test_queries.py
